# SPDX-License-Identifier: BSD-3-Clause
# See Notices.txt for copyright information
[package]
name = "softfloat-rs"
version = "0.1.0"
authors = ["msyksphinz <msyksphinz.dev@gmail.com>", "Yonggang Luo <luoyonggang@gmail.com>"]
license = "BSD-3-Clause"
description = "Rust bindings for Berkeley SoftFloat 3"
repository = "https://github.com/lygstate/softfloat-rs"

[build-dependencies]
cc = "1.0"
cc-version = "0.1.0"
